Add My Profile page with profile edit and password update

--- a/McbaSystem/McbaSystem.csproj
+++ b/McbaSystem/McbaSystem.csproj
@@ -21,4 +21,8 @@
     <Folder Include="Migrations" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Include="Views\Profile\UpdatePassword.cshtml" />
+  </ItemGroup>
+
 </Project>
