--- a/McbaSystem/McbaSystem.csproj
+++ b/McbaSystem/McbaSystem.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="Views\Account\BillPay.cshtml" />
     <AdditionalFiles Include="Views\Profile\UpdatePassword.cshtml" />
   </ItemGroup>
 
