--- a/McbaSystem/McbaSystem.csproj
+++ b/McbaSystem/McbaSystem.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="7.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.2" />
     <PackageReference Include="SimpleHashing.Net" Version="2.1.0" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="8.4.3" />
   </ItemGroup>
 
   <ItemGroup>
